--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,12 @@
     </head>
     <body>
         <div class="sidepanel">
+            <img src="./images/portrait.jpg">
+            <a href="#about-me">About Me</a> 
+            <a href="#exp">Experience</a>
+            <a href="#projects">Projects</a>
+            <a href="#certs">Certifications</a>
+            <a href="#edu">Education</a>
         </div>
             <div class ="left_side">
                 <div class="titletext">
