organized rest of the sections

--- a/web/index.html
+++ b/web/index.html
@@ -12,28 +12,39 @@
             <a href="#about-me">About Me</a> 
             <a href="#exp">Experience</a>
             <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
             <a href="#certs">Certifications</a>
             <a href="#edu">Education</a>
         </div>
-            <div class ="left_side">
-                <div class="titletext">
-                    <h1>Andrew Perlas</h1>
-                    <h3>System Administrator</h3>
-                    <h3>____________________________________</h3>
-                </div>
-                <div class="contact">
-                    <br>
-                    <span>
-                        <a href="mailto:andrew@andrewperlas.com">Email</a> 
-                        <a href="https://www.linkedin.com/in/andrewperlas/">Linkedin</a>
-                        <a href="https://github.com/andrewperlas">Github</a>
-                        <a href="">PDF</a>
-                    </span>
-                </div>
-            </div>
-        <h2>Experience</h2>
+        <div class ="title">
+            <h1>Andrew Perlas</h1>
+            <h3>System Administrator</h3>
+            <span>
+                <a href="mailto:andrew@andrewperlas.com">Email</a> 
+                <a href="https://www.linkedin.com/in/andrewperlas/">Linkedin</a>
+                <a href="https://github.com/andrewperlas">Github</a>
+                <a href="">PDF</a>
+            </span>
+        </div>
+        <div class="section" id="about-me">
+            <h2>About Me</h2>
+            <p>Fill out stuff about me</p>
+        </div>
+        <div class="section" id="exp">
+            <h2>Experience</h2>
             <h3>Client Solution Architects</h3>
                 <h4>System Administrator | Sep 2022 - Present</h4>
+                <ul>
+                    <li>Responsible for the administration and maintenance of the Citrix VDA environment used daily by staff of the Pearl Harbor Naval Shipyard</li>
+                        <ul>
+                            <li>Monitor and troubleshoot to ensure VMs and apps hosted by the Citrix environment are accessible and operational</li>
+                            <li>Perform monthly patching and application updates to images. Updated images are pushed out to the entire Citrix farm through provisioning and Machine Creation Services</li>
+                            <li>Planned and executed the cutover of the existing Xenapp 7.15 farm to an updated Citrix 2203 farm</li>
+                        </ul>
+                    <li>Remediate security vulnerabilities identified by Nessus vulnerability scans. Arrange a plan of action if unable to immediately address the vulnerability</li>
+                    <li>Collaborate with various branches to specify firewall and HBSS rules for systems and apps to allow only necessary network traffic and protocols coming inbound and going outbound on servers</li>
+                    <li>Migrated services, such as DHCP and WSUS, running on Windows Server 2012 R2 operating systems to newer Windows Server 2019/2022 virtual machines hosted on VMware</li>
+                </ul>
             <h3>Wakelight Technologies</h3>
                 <h4>Technical Service Lead | June 2022 - Sep 2022</h4>
             <h3>TechMD</h3>
@@ -41,18 +52,26 @@
                 <h4>Technical Lead/Escalations Analyst | May 2019 - Feb 2021</h4>
                 <h4>Team Lead | Apr 2018 - May 2019</h4>
                 <h4>Systems Analyst | Jan 2015 - Apr 2018</h4>
-        <h2>Projects</h2>
+        </div>   
+        <div class="section" id="projects">
+            <h2>Projects</h2>
             <h3>The Cloud Resume Challenge | 2023 - Present</h3>
             <h3>Homelab | 2021 - Present</h3>
-        <h2>Skills</h2>
-        
-        <h2>Certifications</h2>
+        </div>
+        <div class="section" id="skills">
+            <h2>Skills</h2>
+        </div>
+        <div class="section" id="certs">
+            <h2>Certifications</h2>
             <p>July 2022</p>
             <a href="https://www.credly.com/badges/50e62b2e-3459-4482-b8ad-9bccd898c37e?source=linked_in_profile">
                 <img src="https://images.credly.com/size/340x340/images/74790a75-8451-400a-8536-92d792c5184a/CompTIA_Security_2Bce.png" alt="Security+ Cert">
             </a>
-        <h2>Education</h2>
+        </div>
+        <div class="section" id="edu">
+            <h2>Education</h2>
             <h3>California State University San Marcos</h3>
             <p>B.S. Management Information Systems | Aug 2010 - Dec 2014</p>
+        </div>    
     </body>
 </html>
