completed content of sections

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="sidepanel">
             <img src="./images/portrait.jpg">
-            <a href="#about-me">About Me</a> 
+            <a href="#profile">Profile</a> 
             <a href="#exp">Experience</a>
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
@@ -18,51 +18,156 @@
         </div>
         <div class ="title">
             <h1>Andrew Perlas</h1>
-            <h3>System Administrator</h3>
+            <br>
             <span>
                 <a href="mailto:andrew@andrewperlas.com">Email</a> 
                 <a href="https://www.linkedin.com/in/andrewperlas/">Linkedin</a>
                 <a href="https://github.com/andrewperlas">Github</a>
-                <a href="">PDF</a>
+                <a href="./docs/Andrew Perlas - Resume.pdf">PDF</a>
             </span>
         </div>
-        <div class="section" id="about-me">
-            <h2>About Me</h2>
-            <p>Fill out stuff about me</p>
+        <div class="section" id="profile">
+            <h2>Profile</h2>
+            <br>
+
+            <p>Technical professional with a strong foundation in system administration over the past 9 years. I have gained valuable experience and expertise in supporting and managing various IT infrastructures. I have worn many hats throughout my career - ranging from first responder helpdesk support, to leading a team of technicians, and to executing on larger scale projects for clients to improve the value of technology within their organizations.</p>
+            <br>
+            <p>My current focus is to further develop my skills and knowledge of cloud systems and automation. I want to leverage my sysadmin knowledge to become specialized in a specific role such as a DevOps Engineer or Cloud Architect.</p>
         </div>
         <div class="section" id="exp">
             <h2>Experience</h2>
+            <br>
+
             <h3>Client Solution Architects</h3>
+            <p>Honolulu, HI</p>
+            <br>
+
                 <h4>System Administrator | Sep 2022 - Present</h4>
                 <ul>
                     <li>Responsible for the administration and maintenance of the Citrix VDA environment used daily by staff of the Pearl Harbor Naval Shipyard</li>
                         <ul>
-                            <li>Monitor and troubleshoot to ensure VMs and apps hosted by the Citrix environment are accessible and operational</li>
-                            <li>Perform monthly patching and application updates to images. Updated images are pushed out to the entire Citrix farm through provisioning and Machine Creation Services</li>
-                            <li>Planned and executed the cutover of the existing Xenapp 7.15 farm to an updated Citrix 2203 farm</li>
+                            <li class="indent">Monitor and troubleshoot to ensure VMs and apps hosted by the Citrix environment are accessible and operational</li>
+                            <li class="indent">Perform monthly patching and application updates to images. Updated images are pushed out to the entire Citrix farm through provisioning and Machine Creation Services</li>
+                            <li class="indent">Planned and executed the cutover of the existing Xenapp 7.15 farm to an updated Citrix 2203 farm</li>
                         </ul>
                     <li>Remediate security vulnerabilities identified by Nessus vulnerability scans. Arrange a plan of action if unable to immediately address the vulnerability</li>
                     <li>Collaborate with various branches to specify firewall and HBSS rules for systems and apps to allow only necessary network traffic and protocols coming inbound and going outbound on servers</li>
                     <li>Migrated services, such as DHCP and WSUS, running on Windows Server 2012 R2 operating systems to newer Windows Server 2019/2022 virtual machines hosted on VMware</li>
                 </ul>
+                <br>
+
             <h3>Wakelight Technologies</h3>
+            <p>Honolulu, HI</p>
+            <br>
+
                 <h4>Technical Service Lead | June 2022 - Sep 2022</h4>
+                <ul>
+                    <li>Worked closely with the Program Manager of the contracting company supporting Pearl Harbor Naval Shipyard’s Code 109 (IT and Cybersecurity department) on the operations and technical mentoring of the contractors</li>
+                        <ul>
+                            <li class="indent">Took the opportunity in this position to learn about the different branches of Code 109 and their area of responsibilities</li>
+                        </ul>
+                    <li>Conducted technical interviews for potential Windows System Administrator candidates</li>
+                    <li>Engaged in leadership training classes hosted by Wakelight Technologies and former SES member of the Shipyard</li>
+                </ul>
+                <br>
+
             <h3>TechMD</h3>
+            <p>Santa Ana, CA</p>
+            <br>
+
                 <h4>Professional Services Consultant | Feb 2021 - June 2022</h4>
+                <ul>
+                    <li>Planned, managed, and executed on project deliverables designed to improve the IT infrastructures of our clients and leverage technology to increase end user productivity and business performance</li>
+                        <ul>
+                            <li class="indent">Examples: On-premises server migrations to cloud solutions, configuration of virtual desktop environments through Azure and Citrix, facilitating office moves, and replacing network firewalls/switches/access points</li>
+                        </ul>
+                    <li>Conducted webinars for clients prior to milestone changes to prepare them and educate them on what to expect. After implementation, I would host “office hours” meetings with the end users to answer questions and to assist</li>
+                    <li>Automated a frequent project deliverable for migrations of user workstations to AzureAD using Powershell</li>
+                        <ul>
+                            <li class="indent">This manual process of about 20 minutes per machine could now be fully accomplished in less than 5 minutes by running a script</li>
+                            <li class="indent">Use of the script allowed Consultants to complete this deliverable well under budget and utilize their saved time for other projects</li>
+                        </ul>
+                    <li>Continued providing senior level guidance and escalation to our service team. By the end of my time at TechMD, I had closed over 12,000 tickets (the most in TechMD history) and maintained a client NPS rating of 93</li>
+                </ul>
+                <br>
+
                 <h4>Technical Lead/Escalations Analyst | May 2019 - Feb 2021</h4>
+                <ul>
+                    <li>Served as tier 3 level support for ticket escalation and as a direct escalation point of contact for client VIPs</li>
+                    <li>Worked on the most involved and challenging service team tickets including network cutovers, server outages, and main line of business application updates</li>
+                    <li>Solved clients’ IT infrastructure issues by analyzing and tackling root issues</li>
+                </ul>
+                <br>
+
                 <h4>Team Lead | Apr 2018 - May 2019</h4>
+                <ul>
+                    <li>Mentored members of the service team on the technical and operational knowledge needed to achieve excellent customer service and to exceed our service level agreements</li>
+                    <li>Identified improvements with our business processes so that we could be more efficient and effective in areas such as driving long-standing open tickets to resolution and executing successful on-site client visits</li>
+                    <li>Provided best practice recommendations to our clients including upgrades to legacy hardware, migration of on-premises Exchange or files to Office 365, and establish secondary systems for increased business continuity</li>
+                </ul>
+                <br>
+
                 <h4>Systems Analyst | Jan 2015 - Apr 2018</h4>
+                <ul>
+                    <li>Delivered first responder remote support for about 100 small to medium sized business clients on technical issues and requests ranging from workstation maintenance to network environment outages</li>
+                    <li>Completed TechMD internal advanced lab – an internal workshop for understanding and implementing setup of virtualization, firewall, remote access, VPN, Exchange server, DNS, etc. in a test environment</li>
+                </ul>
+                <br>
         </div>   
         <div class="section" id="projects">
             <h2>Projects</h2>
+            <br>
+
             <h3>The Cloud Resume Challenge | 2023 - Present</h3>
+            <ul>
+                <li>Created a static website using HTML and CSS while utilizing Git to maintain version control </li>
+            </ul>
+            <br>
+            
             <h3>Homelab | 2021 - Present</h3>
+            <ul>
+                <li>Configured Unifi networking equipment (gateway, PoE switch, and access points)</li>
+                <ul>
+                    <li>VLANs created to segregate separate networks for guests, smarthome devices, and management</li>
+                </ul>
+                <li>Installed and maintain Ubuntu Server on Intel NUC to host docker containers (home automation, web servers, Unifi controller, dashboards)</li>
+                <li>Repurposed old PC as a NAS running unRAID for storage with parity and to run local virtual machines</li>
+            </ul>
+            <br>
         </div>
         <div class="section" id="skills">
             <h2>Skills</h2>
+            <br>
+
+            <h4>Essential</h4>
+            <p>Customer Service | Problem Solving | Communication | Teamwork | Documentation | Leadership</p>
+            <br>
+
+            <h4>Operating Systems</h4>
+            <p>Windows Server 2008 - 2022 | Windows 10 | Linux (Ubuntu) | Apple iOS</p>
+            <br>
+
+            <h4>Virtualization</h4>
+            <p>VMWare | HyperV | Microsoft Azure (IaaS, AVD) | Citrix VDA | Docker Compose</p>
+            <br>
+
+            <h4>Networking</h4>
+            <p>DNS | DHCP | VPN | NAT | Routing | VLANs | ACLs | PRTG | SD-WAN</p>
+            <br>
+
+            <h4>Hardware</h4>
+            <p>Dell Sonicwall | Cisco Meraki | Cisco SG switches | Ubiquiti UniFi | Dell PowerEdge |
+            HPE ProLiant | Multi-Function Printers | Synology NAS | unRAID | Datto BCDR</p>
+            <br>
+
+            <h4>Software</h4>
+            <p>Active Directory | Group Policy | Office 365 | Powershell | Sharepoint | OneDrive | Exchange | Microsoft Teams | Patch Management | SQL | PKI | STIGs | ACAS | HBSS | Splunk | HTML | CSS | Git</p>
+            <br>
         </div>
         <div class="section" id="certs">
             <h2>Certifications</h2>
+            <br>
+
             <p>July 2022</p>
             <a href="https://www.credly.com/badges/50e62b2e-3459-4482-b8ad-9bccd898c37e?source=linked_in_profile">
                 <img src="https://images.credly.com/size/340x340/images/74790a75-8451-400a-8536-92d792c5184a/CompTIA_Security_2Bce.png" alt="Security+ Cert">
@@ -70,8 +175,11 @@
         </div>
         <div class="section" id="edu">
             <h2>Education</h2>
+            <br>
+
             <h3>California State University San Marcos</h3>
             <p>B.S. Management Information Systems | Aug 2010 - Dec 2014</p>
+            <br>
         </div>    
     </body>
 </html>
