--- a/web/index.html
+++ b/web/index.html
@@ -130,7 +130,7 @@
                 <ul>
                     <li>VLANs created to segregate separate networks for guests, smarthome devices, and management</li>
                 </ul>
-                <li>Installed and maintain Ubuntu Server on Intel NUC to host docker containers (home automation, web servers, Unifi controller, dashboards)</li>
+                <li>Installed and maintain Ubuntu Server on Intel NUC for hosting docker containers running web applications (dashboards, Unifi controller, home automation)</li>
                 <li>Repurposed old PC as a NAS running unRAID for storage with parity and to run local virtual machines</li>
             </ul>
             <br>
