updated resume content and formatting

--- a/web/index.html
+++ b/web/index.html
@@ -62,12 +62,12 @@
 
                 <h4>Technical Service Lead | June 2022 - Sep 2022</h4>
                 <ul>
-                    <li>Worked closely with the Program Manager of the contracting company supporting Pearl Harbor Naval Shipyard’s Code 109 (IT and Cybersecurity department) on the operations and technical mentoring of the contractors</li>
+                    <li>Worked closely with the Program Manager of the contracting company supporting Pearl Harbor Naval Shipyard’s IT and Cybersecurity department on the operations and technical mentoring of the contractors</li>
                         <ul>
-                            <li class="indent">Took the opportunity in this position to learn about the different branches of Code 109 and their area of responsibilities</li>
+                            <li class="indent">Took the opportunity in this position to learn about the different branches of the department and their area of responsibilities</li>
                         </ul>
-                    <li>Conducted technical interviews for potential Windows System Administrator candidates</li>
-                    <li>Engaged in leadership training classes hosted by Wakelight Technologies and former SES member of the Shipyard</li>
+                    <li>Conducted technical interviews with candidates for Windows System Administrator roles</li>
+                    <li>Engaged in leadership training classes hosted by leaders of the Shipyard who provided firsthand experiences in management and command</li>
                 </ul>
                 <br>
 
