updated profile section

--- a/web/index.html
+++ b/web/index.html
@@ -30,9 +30,14 @@
             <h2>Profile</h2>
             <br>
 
-            <p>Technical professional with a strong foundation in system administration over the past 9 years. I have gained valuable experience and expertise in supporting and managing various IT infrastructures. I have worn many hats throughout my career - ranging from first responder helpdesk support, to leading a team of technicians, and to executing on larger scale projects for clients to improve the value of technology within their organizations.</p>
+            <p>Hello I am Andrew, an IT systems administrator of 9+ years with professional experience supporting, troubleshooting, and managing various IT infrastructures of businesses small and large.</p>
             <br>
-            <p>My current focus is to further develop my skills and knowledge of cloud systems and automation. I want to leverage my sysadmin knowledge to become specialized in a specific role such as a DevOps Engineer or Cloud Architect.</p>
+            
+            </p>A majority of my experience comes from various roles I advanced through within a Managed Service Provider (MSP) company. The combination of my technical skills and my high level of customer service resulted in the completion of over 12,000 customer tickets (the most in my MSP company's history) and an overall NPS rating of 93 throughout my employment. I have been able to further build my technical expertise in Windows server administration and virtualiztion technologies, both on-premise (HyperV, VMware, Citrix AVD) and cloud (Azure), through my current professional position as a contractor IT systems administrator at the Pearl Harbor Shipyard and through personal projects.</p>
+            <br>
+
+            <p>My ambition is to develop my skills and knowledge of cloud systems and automation. I want to leverage my existing sysadmin experience to become specialized in a specific role such as a DevOps Engineer or Cloud Architect.</p>
+            <br>
         </div>
         <div class="section" id="exp">
             <h2>Experience</h2>
@@ -87,7 +92,6 @@
                             <li class="indent">This manual process of about 20 minutes per machine could now be fully accomplished in less than 5 minutes by running a script</li>
                             <li class="indent">Use of the script allowed Consultants to complete this deliverable well under budget and utilize their saved time for other projects</li>
                         </ul>
-                    <li>Continued providing senior level guidance and escalation to our service team. By the end of my time at TechMD, I had closed over 12,000 tickets (the most in TechMD history) and maintained a client NPS rating of 93</li>
                 </ul>
                 <br>
 
