updated profile section v2

--- a/web/index.html
+++ b/web/index.html
@@ -30,13 +30,13 @@
             <h2>Profile</h2>
             <br>
 
-            <p>Hello I am Andrew, an IT systems administrator of 9+ years with professional experience supporting, troubleshooting, and managing various IT infrastructures of businesses small and large.</p>
+            <p>Hello I am Andrew, systems administrator with 9+ years of professional experience managing and troubleshooting IT infrastructures. I have worked in a Managed Service Provider (MSP) company that provided IT services for various small to medium sized businesses throughout Southern California. After taking my talents to Hawaii, I obtained a Top Secret security clearance and now perform sysadmin work as a contractor servicing the Navy as our customer.</p>
             <br>
             
-            </p>A majority of my experience comes from various roles I advanced through within a Managed Service Provider (MSP) company. The combination of my technical skills and my high level of customer service resulted in the completion of over 12,000 customer tickets (the most in my MSP company's history) and an overall NPS rating of 93 throughout my employment. I have been able to further build my technical expertise in Windows server administration and virtualiztion technologies, both on-premise (HyperV, VMware, Citrix AVD) and cloud (Azure), through my current professional position as a contractor IT systems administrator at the Pearl Harbor Shipyard and through personal projects.</p>
+            </p>Throughout my MSP employment, the technical skills I gained and my high level of customer service resulted in the completion of over 12,000 customer tickets (the most in my MSP company's history) and an overall NPS rating of 93. I was able to develop technical expertise in Windows server administration and virtualiztion technologies (VMware, Citrix AVD) that have been essential in supporting the Navy's IT infrastructure at Pearl Harbor Naval Shipyard.</p>
             <br>
 
-            <p>My ambition is to develop my skills and knowledge of cloud systems and automation. I want to leverage my existing sysadmin experience to become specialized in a specific role such as a DevOps Engineer or Cloud Architect.</p>
+            <p>Outside of professional work, I am building personal projects to develop technical skills centered around cloud and devops. These projects will provide hands-on training with cloud infrastructure (Azure), infrastructure as code (Terraform), source control (Git), and automation (Github Actions).</p>
             <br>
         </div>
         <div class="section" id="exp">
