moved skills into experience

--- a/web/index.html
+++ b/web/index.html
@@ -30,14 +30,15 @@
             <h2>Profile</h2>
             <br>
 
-            <p>Hello I am Andrew, systems administrator with 9+ years of professional experience managing and troubleshooting IT infrastructures. I have worked in a Managed Service Provider (MSP) company that provided IT services for various small to medium sized businesses throughout Southern California. After taking my talents to Hawaii, I obtained a Top Secret security clearance and now perform sysadmin work as a contractor servicing the Navy as our customer.</p>
+            <p>Hello I am Andrew, systems administrator with 9+ years of professional experience managing and troubleshooting IT infrastructures. I have worked in a Managed Service Provider (MSP) company that provided on-premise and cloud services for various small to medium sized businesses throughout Southern California. After taking my talents to Hawaii, I obtained a Top Secret security clearance and now perform sysadmin work as a contractor servicing the Navy as the customer.</p>
             <br>
             
-            </p>Throughout my MSP employment, the technical skills I gained and my high level of customer service resulted in the completion of over 12,000 customer tickets (the most in my MSP company's history) and an overall NPS rating of 93. I was able to develop technical expertise in Windows server administration and virtualiztion technologies (VMware, Citrix AVD) that have been essential in supporting the Navy's IT infrastructure at Pearl Harbor Naval Shipyard.</p>
+            </p>Throughout my employment at the MSP company, the technical skills I gained and my high level of customer service resulted in completion of over 12,000 customer tickets (the most in my MSP company's history) and an overall NPS rating of 93. My expertise in Windows server administration and virtualiztion technologies (VMware, Citrix AVD) that I gained from previous experience have been essential today in my support of the Navy's IT infrastructure at Pearl Harbor Naval Shipyard.</p>
             <br>
 
-            <p>Outside of professional work, I am building personal projects to develop technical skills centered around cloud and devops. These projects will provide hands-on training with cloud infrastructure (Azure), infrastructure as code (Terraform), source control (Git), and automation (Github Actions).</p>
+            <p>Beyond professional work, I am building personal projects to establish technical skills centered around cloud and devops. These projects will provide hands-on training with cloud infrastructure (Azure), infrastructure as code (Terraform), source control (Git), and automation (Github Actions).</p>
             <br>
+            
         </div>
         <div class="section" id="exp">
             <h2>Experience</h2>
@@ -61,6 +62,9 @@
                 </ul>
                 <br>
 
+                <p><b>Skills:</b> Windows Server 2012r2 - 2022 | Citrix Virtual Desktops and Apps | VMware | Active Directory | DNS | DHCP | Patch Management | STIGs | PKI | ACAS | HBSS | Customer Service | Problem Solving | Teamwork</p>
+                <br>
+
             <h3>Wakelight Technologies</h3>
             <p>Honolulu, HI</p>
             <br>
@@ -74,6 +78,9 @@
                     <li>Conducted technical interviews with candidates for Windows System Administrator roles</li>
                     <li>Engaged in leadership training classes hosted by leaders of the Shipyard who provided firsthand experiences in management and command</li>
                 </ul>
+                <br>
+
+                <p><b>Skills:</b> Leadership | Communication</p>
                 <br>
 
             <h3>TechMD</h3>
@@ -95,12 +102,18 @@
                 </ul>
                 <br>
 
+                <p><b>Skills:</b> Azure (AD, AVD, Virtual Machines, Virtual Networks, Cost Management) | Office 365 | Sharepoint | OneDrive | Exchange | Powershell | Windows Server 2008 - 2022 | HyperV | VMware | Dell Sonicwall | Cisco Meraki | Citrix Virtual Desktops and Apps | Datto BCDR | VPN | NAT | ACLs | VLAN | SD-WAN | Documentation | Project Management | Communication</p>
+                <br>
+
                 <h4>Technical Lead/Escalations Analyst | May 2019 - Feb 2021</h4>
                 <ul>
                     <li>Served as tier 3 level support for ticket escalation and as a direct escalation point of contact for client VIPs</li>
                     <li>Worked on the most involved and challenging service team tickets including network cutovers, server outages, and main line of business application updates</li>
                     <li>Solved clients’ IT infrastructure issues by analyzing and tackling root issues</li>
                 </ul>
+                <br>
+
+                <p><b>Skills:</b> Leadership | Customer Service | Problem Solving | Teamwork | Dell Sonicwall | Cisco Meraki | Ubiquiti UniFi | DRAC/iLo | Group Policy | Windows Server 2008 - 2022 | Active Directory | SQL</p>
                 <br>
 
                 <h4>Team Lead | Apr 2018 - May 2019</h4>
@@ -111,12 +124,19 @@
                 </ul>
                 <br>
 
+                <p><b>Skills:</b> Leadership | Customer Service | Communication | Teamwork </p>
+                <br>
+
                 <h4>Systems Analyst | Jan 2015 - Apr 2018</h4>
                 <ul>
                     <li>Delivered first responder remote support for about 100 small to medium sized business clients on technical issues and requests ranging from workstation maintenance to network environment outages</li>
                     <li>Completed TechMD internal advanced lab – an internal workshop for understanding and implementing setup of virtualization, firewall, remote access, VPN, Exchange server, DNS, etc. in a test environment</li>
                 </ul>
                 <br>
+
+                <p><b>Skills:</b> Active Directory | Windows 10 | Multi-Function Devices | Office 365</p>
+                <br>
+
         </div>   
         <div class="section" id="projects">
             <h2>Projects</h2>
@@ -137,35 +157,6 @@
                 <li>Installed and maintain Ubuntu Server on Intel NUC for hosting docker containers running web applications (dashboards, Unifi controller, home automation)</li>
                 <li>Repurposed old PC as a NAS running unRAID for storage with parity and to run local virtual machines</li>
             </ul>
-            <br>
-        </div>
-        <div class="section" id="skills">
-            <h2>Skills</h2>
-            <br>
-
-            <h4>Essential</h4>
-            <p>Customer Service | Problem Solving | Communication | Teamwork | Documentation | Leadership</p>
-            <br>
-
-            <h4>Operating Systems</h4>
-            <p>Windows Server 2008 - 2022 | Windows 10 | Linux (Ubuntu) | Apple iOS</p>
-            <br>
-
-            <h4>Virtualization</h4>
-            <p>VMWare | HyperV | Microsoft Azure (IaaS, AVD) | Citrix VDA | Docker Compose</p>
-            <br>
-
-            <h4>Networking</h4>
-            <p>DNS | DHCP | VPN | NAT | Routing | VLANs | ACLs | PRTG | SD-WAN</p>
-            <br>
-
-            <h4>Hardware</h4>
-            <p>Dell Sonicwall | Cisco Meraki | Cisco SG switches | Ubiquiti UniFi | Dell PowerEdge |
-            HPE ProLiant | Multi-Function Printers | Synology NAS | unRAID | Datto BCDR</p>
-            <br>
-
-            <h4>Software</h4>
-            <p>Active Directory | Group Policy | Office 365 | Powershell | Sharepoint | OneDrive | Exchange | Microsoft Teams | Patch Management | SQL | PKI | STIGs | ACAS | HBSS | Splunk | HTML | CSS | Git</p>
             <br>
         </div>
         <div class="section" id="certs">
