added line to projects section

--- a/web/index.html
+++ b/web/index.html
@@ -144,8 +144,9 @@
     
                 <h3>The Cloud Resume Challenge | 2023 - Present</h3>
                 <ul>
-                    <li>Created a static website using HTML and CSS - https://resume.andrewperlas.com</li>
+                    <li>Created a static website using HTML and CSS</li>
                     <li>Azure CLI used to upload website content to Azure storage account</li>
+                    <li>Configured DNS to use custom domain name directed to Azure static website endpoint - <a href="https://resume.andrewperlas.com">https://resume.andrewperlas.com</a></li>
                     <li>Maintaining version control with Git</li>
                 </ul>
                 <br>
