modified resume content to reflect use of Terraform

--- a/web/index.html
+++ b/web/index.html
@@ -145,13 +145,13 @@
                 <h3>The Cloud Resume Challenge | 2023 - Present</h3>
                 <ul>
                     <li>Created a static website using HTML and CSS</li>
-                    <li>Azure CLI used to upload website content to Azure storage account</li>
-                    <li>Configured DNS to use custom domain name directed to Azure static website endpoint - <a href="https://resume.andrewperlas.com">https://resume.andrewperlas.com</a></li>
-                    <li>Maintaining version control with Git</li>
+                    <li>Deployed Azure infrastructure for the website using Terraform</li>
+                    <li>Configured DNS for custom domain name directed to Azure static website endpoint - <a href="https://resume.andrewperlas.com">https://resume.andrewperlas.com</a></li>
+                    <li>Maintained version control with Git</li>
                 </ul>
                 <br>
 
-                <p><b>Skills:</b> Azure (CLI, CDN) • HTML • CSS • Git</p>
+                <p><b>Skills:</b> Azure • Terraform • HTML • CSS • Git</p>
                 <br>
                 
                 <h3>Homelab | 2021 - Present</h3>
