added link to blog on website

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
                 <a href="mailto:andrew@andrewperlas.com">Email</a> 
                 <a href="https://www.linkedin.com/in/andrewperlas/">Linkedin</a>
                 <a href="https://github.com/andrewperlas">Github</a>
+                <a href="https://techblog.andrewperlas.com">Blog</a>
                 <a href="./docs/Andrew Perlas - Resume.pdf">Resume</a>
                 <a href>Top Secret Secrutiy Clearance</a>
             </span>
